--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SQLite_proyect"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
+            android:name=".PantallaPrincipal"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,9 +22,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PeliculasActivity" />
+        <activity android:name=".TipoActorActivity" />
+        <activity android:name=".ActorActivity" />
+        <activity android:name=".MainActivityActor" />
 
         <activity
-            android:name=".PeliculasActivity"></activity>
+        android:name=".MainActivity" />
+        <activity
+            android:name=".MainActivityTipoActor" />
+
     </application>
+
+
 
 </manifest>
