Estan las 4 tablas añadidas y cada una con su CRUD

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         <activity android:name=".TipoActorActivity" />
         <activity android:name=".ActorActivity" />
         <activity android:name=".MainActivityActor" />
+        <activity android:name=".PremioActivity" />
+        <activity android:name=".MainActivityPremio" />
 
         <activity
         android:name=".MainActivity" />
